# scraper-test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: RESEARCH_CLOUDFLARE_BYPASS.md
manga_scraper/: __init__.py  config.py
manga_scraper/api/: __init__.py  app.py
manga_scraper/api/routes/: __init__.py  chapters.py  health.py  jobs.py  series.py
manga_scraper/core/: __init__.py  database.py  logging.py  redis.py
manga_scraper/migrations/: env.py
manga_scraper/models/: __init__.py  base.py  chapter.py  image.py  job.py  series.py
manga_scraper/scrapers/: __init__.py  asura.py  base.py  browser_pool.py  manhwatop.py  mgeko.py
manga_scraper/storage/: __init__.py  s3.py
manga_scraper/workers/: __init__.py  celery_app.py  tasks.py
scripts/: test_scraper.py
tests/: conftest.py  test_scrapers.py
